# bill-reminder

./: .gitignore  Dockerfile.fetch_bill  Dockerfile.process_bill  README.md  encode_creds.py  package-lock.json  pyproject.toml  serverless.yml
.github/workflows/: schedule_python_script.yml
bill_reminder/: logger.py  main.py
common/: helpers.py
fetch_bill/: handler.py
process_bill/: handler.py
