[tool.poetry]
name = "bill-reminder"
version = "0.1.0"
description = ""
authors = ["Harry Tran"]
readme = "README.md"
packages = [{include = "bill_reminder"}]

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.10.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
